# Toast

./: .gitignore  README.md  pyproject.toml  pyqt_toast_inf.py  pysidedeploy.spec  pytest.ini  toast.py
tests/: bench_leak.py  bench_leak_small.py  conftest.py  test_buttons.py  test_cli_main.py  test_container.py  test_expired_history.py  test_local_server.py  test_manager.py  test_pending_order_verify.py  test_performance.py  test_robustness.py  test_summary_overlay.py  test_toast_lifecycle.py  test_tr_i18n.py
